--- a/src/main/resources/templates/nota/nota_cadastro.html
+++ b/src/main/resources/templates/nota/nota_cadastro.html
@@ -1,18 +1,27 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
     <meta charset="UTF-8">
-    <title>Cadastro de Nota</title>
+    <title>Cadastro de Nota Fiscal</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        .titulo {
+            font-size: 1.5em;
+            margin-bottom: 20px;
+        }
+        .subtitulo {
+            font-size: 1.25em;
+            margin-top: 20px;
+            margin-bottom: 10px;
+        }
+    </style>
 </head>
 <body>
     <div th:replace="~{navbar :: menu-principal}"></div>
 
     <div class="container">
-        <h2>Cadastro de Nota</h2>
+        <h2 class="titulo">Cadastro de Nota Fiscal</h2>
         <form id="notaForm" th:action="@{/notas/salvar}" th:object="${nota}" method="post">
-            <!-- Agrupando os campos em colunas -->
             <div class="row">
                 <div class="col-md-6">
                     <div class="form-group">
@@ -22,16 +31,11 @@
                             <option th:each="portaria : ${portarias}" th:value="${portaria}" th:text="${portaria}"></option>
                         </select>
                     </div>
-                </div>
-                <div class="col-md-6">
                     <div class="form-group">
                         <label for="data">Data</label>
                         <input type="date" id="data" th:field="*{data}" class="form-control" required>
                     </div>
                 </div>
-            </div>
-
-            <div class="row">
                 <div class="col-md-6">
                     <div class="form-group">
                         <label for="faixaHorario">Faixa de Horário</label>
@@ -40,8 +44,6 @@
                             <option th:each="faixaHorario : ${faixasHorarios}" th:value="${faixaHorario}" th:text="${faixaHorario}"></option>
                         </select>
                     </div>
-                </div>
-                <div class="col-md-6">
                     <div class="form-group">
                         <label for="tipoVeiculo">Tipo de Veículo</label>
                         <select id="tipoVeiculo" th:field="*{tipoVeiculo}" class="form-control" required>
@@ -50,9 +52,6 @@
                         </select>
                     </div>
                 </div>
-            </div>
-
-            <div class="row">
                 <div class="col-md-6">
                     <div class="form-group">
                         <label for="localDestino">Local de Destino</label>
@@ -73,68 +72,110 @@
                 </div>
             </div>
 
-            <h3>Produtos</h3>
+            <h3 class="subtitulo">Produtos</h3>
             <div id="itensContainer">
-                <div class="item">
-                    <div class="form-group">
-                        <label for="propriedade">Propriedade</label>
-                        <select id="propriedade" th:field="*{itens[0].propriedade.id}" class="form-control" required>
-                            <option value="" disabled selected>Selecione uma propriedade</option>
-                            <option th:each="p : ${propriedades}" th:value="${p.id}" th:text="${p.id} + ' - ' + ${p.produto.nome} + ' - ' + ${p.codigo} + ' - ' + ${p.variedade}"></option>
-                        </select>
+                <div class="item row mb-3">
+                    <div class="col-md-3">
+                        <div class="form-group">
+                            <label for="propriedade">Propriedade</label>
+                            <select id="propriedade" th:field="*{itens[0].propriedade.id}" class="form-control" required>
+                                <option value="" disabled selected>Selecione uma propriedade</option>
+                                <option th:each="p : ${propriedades}" th:value="${p.id}" th:text="${p.id} + ' - ' + ${p.produto.nome} + ' - ' + ${p.codigo} + ' - ' + ${p.variedade}"></option>
+                            </select>
+                        </div>
                     </div>
-
-                    <div class="form-group">
-                        <label for="quantidade">Quantidade</label>
-                        <input type="number" id="quantidade" th:field="*{itens[0].quantidade}" class="form-control" required>
+                    <div class="col-md-3">
+                        <div class="form-group">
+                            <label for="quantidade">Quantidade</label>
+                            <input type="number" id="quantidade" th:field="*{itens[0].quantidade}" class="form-control" required>
+                        </div>
                     </div>
-
-                    <div class="form-group">
-                        <label for="unidadeMedida">Unidade de Medida</label>
-                        <select id="unidadeMedida" th:field="*{itens[0].unidadeMedida}" class="form-control" required>
-                            <option value="" disabled selected>Selecione uma unidade de medida</option>
-                            <option th:each="um : ${unidadesMedida}" th:value="${um}" th:text="${um}"></option>
-                        </select>
+                    <div class="col-md-3">
+                        <div class="form-group">
+                            <label for="unidadeMedida">Unidade de Medida</label>
+                            <select id="unidadeMedida" th:field="*{itens[0].unidadeMedida}" class="form-control" required>
+                                <option value="" disabled selected>Selecione uma unidade de medida</option>
+                                <option th:each="um : ${unidadesMedida}" th:value="${um}" th:text="${um}"></option>
+                            </select>
+                        </div>
                     </div>
-
-                    <button type="button" class="btn btn-danger" onclick="removeItem(this)">Remover Item</button>
-                    <hr>
+                    <div class="col-md-1 d-flex align-items-end">
+                        <button type="button" class="btn btn-danger btn-sm" onclick="removeItem(this)">x</button>
+                    </div>
                 </div>
             </div>
-
             <button type="button" class="btn btn-secondary" onclick="addItem()">Adicionar Item</button>
+            <br><br>
             <button type="submit" class="btn btn-primary">Enviar</button>
         </form>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script>
-        // Script para limpar o formulário na carga da página
         document.addEventListener('DOMContentLoaded', (event) => {
-            document.getElementById('notaForm').reset();
-            document.querySelectorAll('select').forEach(select => {
-                select.selectedIndex = 0;
-            });
+            // Set the date field to today's date
+            const today = new Date().toISOString().split('T')[0];
+            document.getElementById('data').value = today;
+
+            // Clear form fields
+            document.getElementById('portaria').selectedIndex = 0;
+            document.getElementById('faixaHorario').selectedIndex = 0;
+            document.getElementById('tipoVeiculo').selectedIndex = 0;
+            document.getElementById('localDestino').selectedIndex = 0;
+            document.getElementById('municipio').selectedIndex = 0;
+
+            const itensContainer = document.getElementById('itensContainer');
+            while (itensContainer.children.length > 1) {
+                itensContainer.removeChild(itensContainer.lastChild);
+            }
+            const firstItem = itensContainer.firstChild;
+            firstItem.querySelector('#propriedade').selectedIndex = 0;
+            firstItem.querySelector('#quantidade').value = '';
+            firstItem.querySelector('#unidadeMedida').selectedIndex = 0;
         });
 
         function addItem() {
-            var container = document.getElementById('itensContainer');
-            var newItem = container.firstElementChild.cloneNode(true);
-
-            newItem.querySelectorAll('input, select').forEach(input => {
-                input.value = '';
-                input.name = input.name.replace(/\[\d+\]/, '[' + container.childElementCount + ']');
-            });
-
-            container.appendChild(newItem);
+            const container = document.getElementById('itensContainer');
+            const itemIndex = container.children.length;
+            const itemTemplate = `
+                <div class="item row mb-3">
+                    <div class="col-md-3">
+                        <div class="form-group">
+                            <label for="propriedade">Propriedade</label>
+                            <select id="propriedade-${itemIndex}" name="itens[${itemIndex}].propriedade.id" class="form-control" required>
+                                <option value="" disabled selected>Selecione uma propriedade</option>
+                                ${Array.from(document.querySelectorAll('#propriedade option')).map(option => `<option value="${option.value}">${option.text}</option>`).join('')}
+                            </select>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="form-group">
+                            <label for="quantidade-${itemIndex}">Quantidade</label>
+                            <input type="number" id="quantidade-${itemIndex}" name="itens[${itemIndex}].quantidade" class="form-control" required>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="form-group">
+                            <label for="unidadeMedida-${itemIndex}">Unidade de Medida</label>
+                            <select id="unidadeMedida-${itemIndex}" name="itens[${itemIndex}].unidadeMedida" class="form-control" required>
+                                <option value="" disabled selected>Selecione uma unidade de medida</option>
+                                ${Array.from(document.querySelectorAll('#unidadeMedida option')).map(option => `<option value="${option.value}">${option.text}</option>`).join('')}
+                            </select>
+                        </div>
+                    </div>
+                    <div class="col-md-1 d-flex align-items-end">
+                        <button type="button" class="btn btn-danger btn-sm" onclick="removeItem(this)">x</button>
+                    </div>
+                </div>
+            `;
+            container.insertAdjacentHTML('beforeend', itemTemplate);
         }
 
         function removeItem(button) {
-            var container = document.getElementById('itensContainer');
-            if (container.childElementCount > 1) {
-                button.closest('.item').remove();
-            } else {
-                alert('Não é possível remover todos os itens.');
+            const item = button.closest('.item');
+            const container = document.getElementById('itensContainer');
+            if (container.children.length > 1) {
+                container.removeChild(item);
             }
         }
     </script>
