--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -84,10 +84,10 @@
                         <li><a class="dropdown-item" th:href="@{/admin/users}">Gerenciamento de Usuários</a></li>
                     </ul>
                  <li class="nav-item">
-                    <a class="nav-link" sec:authorize="hasRole('MANAGER')" th:href="@{/notas/cadastrar}">Notas</a>
+                    <a class="nav-link" sec:authorize="hasRole('ADMIN')" th:href="@{/notas/cadastrar}">Notas</a>
                 </li>
                  <li class="nav-item">
-                    <a class="nav-link" sec:authorize="hasRole('MANAGER')" th:href="@{/notas-fiscais/cadastrar}">Notas Fiscais</a>
+                    <a class="nav-link" sec:authorize="hasRole('ADMIN')" th:href="@{/notas-fiscais/cadastrar}">Notas Fiscais</a>
                 </li>
             </ul>
             
