--- a/src/main/resources/templates/nota/nota_cadastro.html
+++ b/src/main/resources/templates/nota/nota_cadastro.html
@@ -18,6 +18,12 @@
             cursor: pointer;
             margin-left: 10px;
         }
+        .form-control-wide {
+            width: 100%;
+        }
+        .form-control-small {
+            width: auto;
+        }
     </style>
 </head>
 <body>
@@ -65,7 +71,7 @@
                         </select>
                     </div>
                 </div>
-                <div class="col-md-6">
+                  <div class="col-md-6">
                     <div class="form-group">
                         <label for="municipio">Município</label>
                         <div class="input-group">
@@ -82,31 +88,34 @@
             <h3 class="subtitulo">Produtos</h3>
             <div id="itensContainer">
                 <div class="item row mb-3">
-                    <div class="col-md-3">
+                    <div class="col-md-4">
                         <div class="form-group">
-                            <label for="propriedade">Propriedade</label>
-                            <select id="propriedade" th:field="*{itens[0].propriedade.id}" class="form-control" required>
-                                <option value="" disabled selected>Selecione uma propriedade</option>
-                                <option th:each="p : ${propriedades}" th:value="${p.id}" th:text="${p.id} + ' - ' + ${p.produto.nome} + ' - ' + ${p.codigo} + ' - ' + ${p.variedade}"></option>
-                            </select>
+                            <label for="propriedade-0">Propriedade</label>
+                            <div class="input-group">
+                                <input type="text" id="searchPropriedade-0" class="form-control" placeholder="Digite o código ou nome da variedade" oninput="searchPropriedades(0)">
+                                <select id="propriedade-0" name="itens[0].propriedade.id" class="form-control form-control-wide" required>
+                                    <option value="" disabled selected>Selecione uma propriedade</option>
+                                    <option th:each="p : ${propriedades}" th:value="${p.id}" th:text="${p.id} + ' - ' + ${p.produto.nome} + ' - ' + ${p.codigo} + ' - ' + ${p.variedade}"></option>
+                                </select>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-1 offset-md-1">
                         <div class="form-group">
-                            <label for="quantidade">Quantidade</label>
-                            <input type="number" id="quantidade" th:field="*{itens[0].quantidade}" class="form-control" required>
+                            <label for="quantidade-0">Quantidade</label>
+                            <input type="number" id="quantidade-0" name="itens[0].quantidade" class="form-control form-control-small" required>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-2 offset-md-2">
                         <div class="form-group">
-                            <label for="unidadeMedida">Unidade de Medida</label>
-                            <select id="unidadeMedida" th:field="*{itens[0].unidadeMedida}" class="form-control" required>
+                            <label for="unidadeMedida-0">Unidade de Medida</label>
+                            <select id="unidadeMedida-0" name="itens[0].unidadeMedida" class="form-control" required>
                                 <option value="" disabled selected>Selecione uma unidade de medida</option>
                                 <option th:each="um : ${unidadesMedida}" th:value="${um}" th:text="${um}"></option>
                             </select>
                         </div>
                     </div>
-                    <div class="col-md-1 d-flex align-items-end">
+                    <div class="col-md-2 d-flex align-items-end">
                         <button type="button" class="btn btn-danger btn-sm" onclick="removeItem(this)">x</button>
                     </div>
                 </div>
@@ -117,6 +126,12 @@
         </form>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/script/nota/clearForm.js"></script>
+    <script src="/script/nota/itemManagement.js"></script>
+    <script src="/script/nota/propriedadeSearch.js"></script>
+    
+    <!-- Modal de Pesquisa de Municípios -->
     <!-- Modal de Pesquisa de Municípios -->
     <div class="modal fade" id="searchMunicipioModal" tabindex="-1" role="dialog" aria-labelledby="searchMunicipioModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
@@ -151,10 +166,5 @@
             </div>
         </div>
     </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/script/nota/clearForm.js"></script>
-    <script src="/script/nota/itemManagement.js"></script>
-    <script src="/script/nota/municipioSearch.js"></script>
 </body>
 </html>
