Qualidade peso decimal aceito

--- a/src/main/resources/templates/nota/nota_cadastro.html
+++ b/src/main/resources/templates/nota/nota_cadastro.html
@@ -103,7 +103,7 @@
                     <div class="col-md-1 offset-md-1">
                         <div class="form-group">
                             <label for="quantidade-0">Quantidade</label>
-                            <input type="number" id="quantidade-0" name="itens[0].quantidade" class="form-control form-control-small" required>
+                            <input type="number" id="quantidade-0" name="itens[0].quantidade" class="form-control form-control-small" step="any" required>
                         </div>
                     </div>
                     <div class="col-md-2 offset-md-2">
