--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -83,9 +83,17 @@
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" th:href="@{/admin/users}">Gerenciamento de Usuários</a></li>
                     </ul>
-                 <li class="nav-item">
-                    <a class="nav-link" sec:authorize="hasRole('ADMIN')" th:href="@{/notas/cadastrar}">Notas</a>
+                 <li class="nav-item dropdown">                
+                	
+                    <a class="nav-link dropdown-toggle"  href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Nota</a>
+                     <ul class="dropdown-menu">
+                    	<li><a class="dropdown-item"  sec:authorize="hasRole('ADMIN')" th:href="@{/notas/cadastrar}">Cadastrar Notas</a> </li> 
+                    	<li><a class="dropdown-item"  sec:authorize="hasRole('ADMIN')" th:href="@{/notas/listar}">Listar Notas</a> </li> 
+                    
+                    </ul>
+                  
                 </li>
+                
                  <li class="nav-item">
                     <a class="nav-link" sec:authorize="hasRole('ADMIN')" th:href="@{/notas-fiscais/cadastrar}">Notas Fiscais</a>
                 </li>
