--- a/src/main/resources/templates/nota/nota_cadastro.html
+++ b/src/main/resources/templates/nota/nota_cadastro.html
@@ -134,8 +134,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/script/nota/clearForm.js"></script>
     <script src="/script/nota/itemManagement.js"></script>
-    <script src="/script/nota/propriedadeSearch.js"></script>
-    <script src="/script/nota/municipioSearch.js"></script>
+     <script src="/script/nota/municipioSearch.js"></script>
+     
     <script>
         function openMunicipioModal() {
             document.getElementById('municipioSearchModal').style.display = 'block';
@@ -176,6 +176,23 @@
 
             document.getElementById('notaForm').submit();
         }
+        
+        
+        function searchPropriedades(itemIndex) {
+            const query = document.getElementById(`searchPropriedade-${itemIndex}`).value.toLowerCase();
+            const select = document.getElementById(`propriedade-${itemIndex}`);
+            const options = select.options;
+
+            for (let i = 1; i < options.length; i++) {
+                const text = options[i].text.toLowerCase();
+                if (text.includes(query)) {
+                    options[i].style.display = '';
+                } else {
+                    options[i].style.display = 'none';
+                }
+            }
+        }
+        
     </script>
 </body>
 </html>
