--- a/src/main/resources/templates/cotacao/pesquisa_propriedade.html
+++ b/src/main/resources/templates/cotacao/pesquisa_propriedade.html
@@ -1,79 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link th:href="@{/css/myStyle.css}" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script th:src="@{/script/cotacao/nova_pesquisa_propriedade.js}"></script>
     <title>Pesquisa de Propriedade</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 </head>
 <body>
     <div class="container">
         <h1>Pesquisa de Propriedade</h1>
-        <div class="form-group">
-            <label for="propertyCode">Código da Propriedade:</label>
-            <input type="text" id="propertyCode" class="form-control" placeholder="Digite o código da propriedade">
-        </div>
-        <div class="form-group">
-            <label for="productName">Nome do Produto:</label>
-            <input type="text" id="productName" class="form-control" placeholder="Digite o nome do produto">
-            <button type="button" class="btn btn-secondary" id="searchProductButton">Pesquisar</button>
-        </div>
-        <!-- Resultados da Pesquisa -->
-        <div id="searchResults">
-            <!-- Resultados da pesquisa serão carregados aqui -->
-        </div>
+        <form th:action="@{/cotacoes/cadastrar}" method="GET">
+            <div class="form-group">
+                <label for="dataCotacao">Data da Cotação:</label>
+                <input type="date" id="dataCotacao" name="data" class="form-control" th:value="${dataCotacao}" required>
+            </div>
+            <div class="form-group">
+                <label for="propertyCode">Código da Propriedade:</label>
+                <input type="text" id="propertyCode" class="form-control" placeholder="Digite o código da propriedade">
+            </div>
+            <div class="form-group">
+                <label for="productName">Nome do Produto:</label>
+                <input type="text" id="productName" class="form-control" placeholder="Digite o nome do produto">
+                <button type="button" class="btn btn-secondary" id="searchProductButton">Pesquisar</button>
+            </div>
+            <div id="searchResults">
+                <!-- Resultados da pesquisa serão carregados aqui -->
+            </div>
+            <input type="hidden" id="selectedPropertyId" name="propriedadeId">
+            <button type="submit" class="btn btn-primary" id="selectPropertyButton" disabled>Selecionar Propriedade</button>
+        </form>
     </div>
-    
-    <script>
-        $(document).ready(function() {
-            $('#propertyCode').on('input', function() {
-                let code = $(this).val();
-                if (code.length > 0) {
-                    $.ajax({
-                        url: '/searchPropertyByCode',
-                        method: 'GET',
-                        data: { code: code },
-                        success: function(data) {
-                            if (!data) {
-                                $('#searchResults').html('<p>Nenhuma propriedade encontrada.</p>');
-                            } else {
-                                $('#searchResults').html('<p>Propriedade encontrada: ' + data.codigo + ' - ' + data.produto.nome + ' ' + data.variedade + ' ' + data.subvariedade + ' ' + data.classificacao+'</p>');
-                            }
-                        },
-                        error: function() {
-                            $('#searchResults').html('<p>Nenhuma propriedade encontrada.</p>');
-                        }
-                    });
-                }
-            });
-
-            $('#searchProductButton').click(function() {
-                let productName = $('#productName').val();
-                if (productName.length > 0) {
-                    $.ajax({
-                        url: '/searchPropertyByProductName',
-                        method: 'GET',
-                        data: { productName: productName },
-                        success: function(data) {
-                            if (data.length === 0) {
-                                $('#searchResults').html('<p>Nenhuma propriedade encontrada.</p>');
-                            } else {
-                                let resultsHtml = '<ul>';
-                                data.forEach(function(item) {
-                                    resultsHtml += '<li>' + item.codigo + ' - ' + item.produto.nome + ' ' + item.variedade + ' ' + item.subvariedade + ' ' + item.classificacao +'</li>';
-                                });
-                                resultsHtml += '</ul>';
-                                $('#searchResults').html(resultsHtml);
-                            }
-                        },
-                        error: function() {
-                            $('#searchResults').html('<p>Nenhuma propriedade encontrada.</p>');
-                        }
-                    });
-                }
-            });
-        });
-    </script>
 </body>
 </html>
